gn format: Support # NOSORT to disable sorting of blocks

R=brettw@chromium.org
BUG=591953

Review URL: https://codereview.chromium.org/1766163002

Cr-Commit-Position: refs/heads/master@{#380709}

Former-commit-id: aa7f7d038156bdf3f317773b784b4a308efd0132